Added tabs, and put the map in one.
Created dummy for the list-view as well

--- a/pg3200/a02/res/values/strings.xml
+++ b/pg3200/a02/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">WeatherMap</string>
+    <string name="forecasts">Forecasts</string>
+    <string name="map">Map</string>
 </resources>
